Particle Motion Blur very slow rendering #45019

Closed
opened 2015-06-10 22:43:33 +02:00 by BernhardS · 7 comments

System Information
Windows 7 64bit, GTX 750ti

Blender Version
Broken: 2.74 000dfc0

Short description of error
Frames, in which particles are emitted, render extremely slow when motion blur is active (using cycles)

Long description
When rendering the animation on CPU, the frames 1-49 (in which new particles are generated) render very slow. (When using the GPU to render, the system will probably freeze completely.) From frame 50 on, it will render much faster.

Another user told me, that if he renders the same frame multiple times without changing any settings, it sometimes renders in a few seconds, and sometimes it takes minutes or does not render at all (I could not reproduce that). He also says, there does not seem to be a conjunction between the render-time and the state of particle emission, but I checked it twice and it is only slow until frame 49 on my system.
When he was trying to render with GPU (Quadro K4000) it crashed every time. He tested on 2.74 / 2.74.5 / 2.73a.

Exact steps for others to reproduce the error
Render the animation (with CPU to prevent the system from freezing), or render a frame between 1 and 49 and one >50.

ParticleBlurBug2.blend

**System Information** Windows 7 64bit, GTX 750ti **Blender Version** Broken: 2.74 000dfc0 **Short description of error** Frames, in which particles are emitted, render extremely slow when motion blur is active (using cycles) **Long description** When rendering the animation on CPU, the frames 1-49 (in which new particles are generated) render very slow. (When using the GPU to render, the system will probably freeze completely.) From frame 50 on, it will render much faster. Another user told me, that if he renders the same frame multiple times without changing any settings, it sometimes renders in a few seconds, and sometimes it takes minutes or does not render at all (I could not reproduce that). He also says, there does not seem to be a conjunction between the render-time and the state of particle emission, but I checked it twice and it is only slow until frame 49 on my system. When he was trying to render with GPU (Quadro K4000) it crashed every time. He tested on 2.74 / 2.74.5 / 2.73a. **Exact steps for others to reproduce the error** Render the animation (with CPU to prevent the system from freezing), or render a frame between 1 and 49 and one >50. [ParticleBlurBug2.blend](https://archive.blender.org/developer/F189173/ParticleBlurBug2.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @BernhardSteuer

Added subscriber: @BernhardSteuer

Added subscriber: @Sergey

Added subscriber: @Sergey

Actual problem seems to be caused by the way how particles are born? For some reason on lower frame numbers it is like half of the frame filled in with particles, which from quick look seems wrong. Would need to have a closer look tho.

Actual problem seems to be caused by the way how particles are born? For some reason on lower frame numbers it is like half of the frame filled in with particles, which from quick look seems wrong. Would need to have a closer look tho.

This issue was referenced by 52fda9b0db

This issue was referenced by 52fda9b0dbdc561f905cd691532e361a0254113a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by blender/cycles@bb08fab201

This issue was referenced by blender/cycles@bb08fab201d6288a81c189200f8cec2c5b2adfe2
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45019
No description provided.